// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/message-center/components/templates/common/MessageFooter should render correctly if action item provided 1`] = `
<div
  className="MessageFooter"
>
  <span
    className="MessageFooter-date"
  >
    <MessageFormattedDate
      date={2020-09-16T23:06:39.505Z}
    />
  </span>
  <a
    className="MessageFooter-action"
    data-resin-target="messageCenterAction"
    href="testURL"
    target="_self"
  >
    label
     →
  </a>
</div>
`;

exports[`components/message-center/components/templates/common/MessageFooter should render correctly if no action item present 1`] = `
<div
  className="MessageFooter"
>
  <span
    className="MessageFooter-date"
  >
    <MessageFormattedDate
      date={2020-09-16T23:06:39.505Z}
    />
  </span>
</div>
`;
